@@ -37,6 +37,7 @@ option(ENABLE_CDPARANOIA "Enable CDParanoia libraries(required for AudioCD suppo
 option(ENABLE_CDDB "Enable CDDB libraries(either this or MusicBrianz required for AudioCD support)" ON)
 option(ENABLE_MUSICBRAINZ "Enable MusicBrianz libraries(either this or CDDB required for AudioCD support)" ON)
 option(ENABLE_LAME "Enable LAME libraries(required for AudioCD playback support)" ON)
+option(ENABLE_PROXY_CONFIG "Enable proxy config in settings dialog" OFF)
 
 if (ENABLE_QT5)
     set(ENABLE_KDE FALSE)
@@ -432,9 +433,12 @@ else (ENABLE_KDE_SUPPORT)
         endif (MINGW)
     endif (WIN32)
 
-    set(CANTATA_SRCS ${CANTATA_SRCS} network/networkproxyfactory.cpp network/proxysettings.cpp)
-    set(CANTATA_MOC_HDRS ${CANTATA_MOC_HDRS} network/proxysettings.h)
-    set(CANTATA_UIS ${CANTATA_UIS} network/proxysettings.ui)
+    set(CANTATA_SRCS ${CANTATA_SRCS} network/networkproxyfactory.cpp)
+    if (ENABLE_PROXY_CONFIG)
+        set(CANTATA_SRCS ${CANTATA_SRCS} network/proxysettings.cpp)
+        set(CANTATA_MOC_HDRS ${CANTATA_MOC_HDRS} network/proxysettings.h)
+        set(CANTATA_UIS ${CANTATA_UIS} network/proxysettings.ui)
+    endif (ENABLE_PROXY_CONFIG)
     set(CANTATA_RCS ${CANTATA_RCS} cantata_qt.qrc)
     if (ENABLE_QT5)
         QT5_ADD_RESOURCES(CANTATA_RC_SRCS ${CANTATA_RCS})
